--- a/FITLOI-UI/package.json
+++ b/FITLOI-UI/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.12.1",
+    "dayjs": "^1.11.12",
+    "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
   },
